--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@ficusjs/core",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "description": "Core functions for FicusJS",
   "type": "module",
   "main": "dist/index.mjs",
   "module": "dist/index.mjs",
   "types": "types/index.d.ts",
+  "sideEffects": false,
   "scripts": {
     "build": "run-p build:*",
     "build:all": "rollup -i src/index.mjs -o dist/index.mjs -f es -p \"terser={mangle: { keep_fnames: true, toplevel: true, module: true }}\" -p \"filesize={}\"",
@@ -43,20 +44,20 @@
   },
   "homepage": "https://github.com/ficusjs/ficusjs-core#readme",
   "devDependencies": {
-    "@ficusjs/renderers": "4.0.0",
+    "@ficusjs/renderers": "4.1.1",
     "ava": "3.15.0",
-    "c8": "7.9.0",
-    "cypress": "8.4.0",
-    "http-server": "13.0.2",
-    "jsdom": "17.0.0",
+    "c8": "7.10.0",
+    "cypress": "8.6.0",
+    "http-server": "14.0.0",
+    "jsdom": "18.0.0",
     "node-sessionstorage": "1.0.0",
     "npm-run-all": "4.1.5",
     "open-cli": "7.0.1",
-    "rollup": "2.56.3",
+    "rollup": "2.58.0",
     "rollup-plugin-filesize": "9.1.1",
     "rollup-plugin-terser": "7.0.2",
     "sinon": "11.1.2",
-    "standard": "16.0.3",
+    "standard": "16.0.4",
     "start-server-and-test": "1.14.0"
   },
   "exports": {
