--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ficusjs/core",
-  "version": "3.0.1",
+  "version": "3.1.0",
   "description": "Core functions for FicusJS",
   "type": "module",
   "main": "dist/index.mjs",
@@ -45,7 +45,8 @@
   "homepage": "https://github.com/ficusjs/ficusjs-core#readme",
   "devDependencies": {
     "@ficusjs/renderers": "5.4.1",
-    "ava": "5.0.1",
+    "@ficusjs/state": "3.4.2",
+    "ava": "5.1.0",
     "c8": "7.12.0",
     "cypress": "11.0.1",
     "http-server": "14.1.1",
