--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ficusjs/core",
-  "version": "3.1.2",
+  "version": "3.1.3",
   "description": "Core functions for FicusJS",
   "type": "module",
   "main": "dist/index.mjs",
@@ -44,22 +44,22 @@
   },
   "homepage": "https://github.com/ficusjs/ficusjs-core#readme",
   "devDependencies": {
-    "@ficusjs/renderers": "5.7.0",
-    "@ficusjs/state": "4.1.1",
-    "ava": "5.1.1",
-    "c8": "7.12.0",
-    "cypress": "12.3.0",
+    "@ficusjs/renderers": "5.8.0",
+    "@ficusjs/state": "4.1.2",
+    "@rollup/plugin-terser": "^0.4.3",
+    "ava": "5.3.1",
+    "c8": "8.0.1",
+    "cypress": "12.17.2",
     "http-server": "14.1.1",
-    "jsdom": "21.1.0",
+    "jsdom": "22.1.0",
     "node-sessionstorage": "1.0.0",
     "npm-run-all": "4.1.5",
-    "open-cli": "7.1.0",
-    "rollup": "3.10.1",
-    "rollup-plugin-filesize": "9.1.2",
-    "rollup-plugin-terser": "7.0.2",
-    "sinon": "15.0.1",
+    "open-cli": "7.2.0",
+    "rollup": "3.27.0",
+    "rollup-plugin-filesize": "10.0.0",
+    "sinon": "15.2.0",
     "standard": "16.0.4",
-    "start-server-and-test": "1.15.2"
+    "start-server-and-test": "2.0.0"
   },
   "exports": {
     ".": {
